--- a/cssCustomizations.html
+++ b/cssCustomizations.html
@@ -1,3 +1,7 @@
+<!-- Load the Bootstrap UI styles & Google Font. -->
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <style>
 :root {
 	--primary-color: #5c6bc0;
@@ -17,8 +21,9 @@
 	padding: 0;
 }
 
-body {
-	font-family: 'Open Sans', sans-serif;
+body { 
+	font-family: "Roboto", "Open Sans", Arial, sans-serif; 
+	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.6;
 	background-color: var(--background-color);
@@ -38,7 +43,7 @@ body {
 	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
 }
 
-.pane-title, .button-bar button, #entry-title {
+.pane-title, .button-bar .ogButton, #entry-title {
 	font-weight: 600;
 }
 
@@ -239,7 +244,7 @@ input[type='checkbox']:focus {
 	cursor: pointer;
 }
 
-.button-bar button {
+.button-bar .ogButton {
 	padding: 10px 15px;
 	font-size: 1rem;
 	margin-left: 10px;
@@ -250,20 +255,20 @@ input[type='checkbox']:focus {
 	transition: background-color 0.3s ease;
 }
 
-.button-bar button:focus {
+.button-bar .ogButton:focus {
 	outline: none;
 	box-shadow: 0 0 0 2px var(--hover-color);
 }
 
-.button-bar button:hover {
+.button-bar .ogButton:hover {
 	background-color: var(--hover-color);
 }
 
-.button-bar button, .entry-item {
+.button-bar .ogButton, .entry-item {
 	padding: 12px 18px;
 }
 
-.button-bar button, .color-option {
+.button-bar .ogButton, .color-option {
 	border-radius: 8px;
 }
 
@@ -287,7 +292,7 @@ input[type='checkbox']:focus {
 	border: 1px solid var(--border-color);
 }
 
-.entry-item:hover, .button-bar button:hover {
+.entry-item:hover, .button-bar .ogButton:hover {
 	transition: box-shadow 0.3s ease, background-color 0.3s ease;
 }
 
@@ -395,7 +400,7 @@ input[type='checkbox']:focus {
 		border-right: none;
 	}
 
-	.button-bar button {
+	.button-bar .ogButton {
 		padding: 12px;
 	}
 
