Major HTML & CSS changes.

--- a/index.html
+++ b/index.html
@@ -1,48 +1,62 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Notepad</title>
-	<!-- <?!= include('cssCustomizations'); ?> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notepad</title>
+    <!-- Load Bootstrap CSS and other necessary styles -->
+	<?!= include('cssCustomizations'); ?>
 </head>
 <body>
-	<div class="top-pane">
-		<input type="text" class="form-control" id="entry-title" placeholder="Create new entry here..." style="flex-basic: content;">
-		<div class="d-flex">
-			<button type="button" class="btn btn-primary btn-sm" id="save-button">Save as txt file</button>
-			<button type="button" class="btn btn-primary btn-sm" id="save-db-button">Save DB File</button>
-			<button type="button" class="btn btn-primary btn-sm" id="load-db-button">Load DB File</button>
-			<button type="button" class="btn btn-primary btn-sm" id="save-content-button">Save</button>
-			<select class="form-select form-select-sm" id="load-select"></select>
-			<button type="button" class="btn btn-danger btn-sm" id="delete-content-button">Delete</button>
-		</div>
-	</div>
-	<div class="content-area">
-		<div id="entry-list"></div>
-		<div id="entry-content"></div>
-	</div>
-	<textarea id="entry-content-storage" class="form-control"></textarea>
-	<input id="file-input" type="file" style="display: none;">
+    <div class="container-fluid p-3">
+        <div class="row align-items-center mb-3">
+            <div class="col">
+                <input type="text" class="form-control" id="entry-title" placeholder="Create new entry here...">
+            </div>
+            <div class="col-auto d-flex">
+                <button type="button" class="btn btn-primary btn-sm me-2" id="save-button">Save as txt file</button>
+                <button type="button" class="btn btn-primary btn-sm me-2" id="save-db-button">Save DB File</button>
+                <button type="button" class="btn btn-primary btn-sm me-2" id="load-db-button">Load DB File</button>
+                <button type="button" class="btn btn-primary btn-sm me-2" id="save-content-button">Save</button>
+                <select class="form-select form-select-sm me-2" id="load-select"></select>
+                <button type="button" class="btn btn-danger btn-sm" id="delete-content-button">Delete</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <div id="entry-list" class="border p-3" style="max-height: 500px; overflow-y: auto;"></div>
+            </div>
+            <div class="col-9">
+                <div id="entry-content" class="border p-3" style="height: 500px; overflow-y: auto;"></div>
+            </div>
+        </div>
+    </div>
 
-	<div class="modal fade" id="collectionNameModal" tabindex="-1" aria-labelledby="collectionNameLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="collectionNameLabel">Enter Collection Name</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<p>Enter a name for your collection (a timestamp will be added).</p>
-					<div class="mb-3">
-						<input type="text" class="form-control" id="collectionNameInput" placeholder="Collection Name">
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary" id="saveCollectionName">Save</button>
-				</div>
-			</div>
-		</div>
-	</div>
+    <textarea id="entry-content-storage" class="form-control d-none"></textarea>
+    <input id="file-input" type="file" class="d-none">
 
+    <!-- Modal for entering collection name -->
+    <div class="modal fade" id="collectionNameModal" tabindex="-1" aria-labelledby="collectionNameLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="collectionNameLabel">Enter Collection Name</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Enter a name for your collection (a timestamp will be added).</p>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" id="collectionNameInput" placeholder="Collection Name">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="saveCollectionName">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Load Bootstrap JS and dependencies -->
 	<?!= include('jsFunctions'); ?>
 	<?!= include('gspFunctions'); ?>
 </body>
