--- a/index.html
+++ b/index.html
@@ -1,23 +1,134 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Notepad</title>
-	<?!= include('cssCustomizations'); ?>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notepad</title>
+    <!-- Load the Bootstrap CSS styles & Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <!-- Load the jQuery, Bootstrap, and CKEditor libraries. -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/ckeditor.js"></script> -->
+    <script src="https://cdn.ckeditor.com/ckeditor5/41.4.2/decoupled-document/ckeditor.js"></script>
+    <!-- Load custom CSS styles -->
+    <style>
+        body, html {
+            height: 100%;
+        }
+        .container-fluid {
+            height: 90%;
+        }
+        .row-full-height {
+            height: 100%;
+        }
+        .col-full-height {
+            height: 100%;
+            overflow-y: auto;
+        }
+        .note-card {
+            cursor: pointer;
+        }
+        .note-actions {
+            float: right;
+        }
+        .selected-note {
+            /* background-color: #e0e0e0; */
+        }
+        #notes-list .bi-trash, #notes-list .bi-trash-fill {
+            /* color: var(--bs-gray-500);
+            z-index: 9999; */
+        }
+        #notes-list .bi-trash:hover, #notes-list .bi-trash-fill:hover {
+            /* color: var(--bs-red); */
+        }
+        #note-details-container {
+            height: 90vh;
+        }
+        .card {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        .card-text {
+            border: 1px solid var(--bs-list-group-border-color);
+        }
+        .card .card-body {
+            display: flex;
+            flex-direction: column;
+        }
+        .card textarea {
+            flex-grow: 1;
+            resize: none;
+        }
+    </style>
 </head>
 <body>
-	<div class="top-pane">
-		<input id="entry-title" type="text" placeholder="Create new entry here...">
-		<div class="button-bar">
-			<button id="save-button" type="button">Save as txt file</button>
-			<button id="save-db-button" type="button">Save DB File</button>
-			<button id="load-db-button" type="button">Load DB File</button> 
-		</div>
-	</div>
-	<div class="content-area">
-		<div id="entry-list"></div>
-		<div id="entry-content"></div>
-	</div>
-	<textarea id="entry-content-storage"></textarea>
-	<input id="file-input" type="file" style="display: none;">
-	<?!= include('jsFunctions'); ?>
+
+    <div class="container-fluid p-3 vh-100">
+        <div class="row h-100">
+
+            <!-- Column for card titles -->
+            <div id="notes-list-container" class="col-md-3 d-flex flex-column mb-3">
+                <div class="d-flex mb-3 align-items-center">
+                    <h4 class="mb-0">Notes</h4>
+                    <!-- <i class="bi bi-plus-circle-fill" style="cursor: pointer; color: var(--bs-green);" onclick="addNote()"></i> -->
+                    <div class="btn-group ms-auto">
+                        <button type="button" class="btn btn-outline-secondary btn-sm pe-2" onclick="addNote()">
+                            <i class="bi bi-plus-circle-fill me-2"></i>New Note</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                            <span class="visually-hidden">Toggle Dropdown</span>
+                        </button>
+                        <ul class="dropdown-menu shadow dropdown-menu-end">
+                            <li><a class="dropdown-item" id="exportNote"><i class="bi bi-journal-arrow-down me-2"></i>Save Selected Note</a></li>
+                            <li><a class="dropdown-item" id="exportDB"><i class="bi bi-database-down me-2"></i>Export All Notes</a></li>
+                            <li><a class="dropdown-item" id="importDB"><i class="bi bi-database-up me-2"></i>Import All Notes</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div id="notes-list" class="list-group flex-grow-1">
+                    <!-- Note titles will be appended here -->
+                </div>
+            </div>
+
+            <!-- Column for the selected note -->
+            <div id="note-details-container" class="col-md-9">
+                <h4>Note Details</h4>
+                <div class="card">
+                    <div class="card-body" style="display: none;">
+                        <div class="d-flex mb-3">
+                            <input class="card-title form-control mb-0 me-3" type="text" placeholder="Title for this note...">
+                        </div>
+                        <div id="toolbar-container"></div>
+                        <div class="card-text h-100" id="editor"></div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div class="modal fade" id="deleteConfirmation" tabindex="-1" aria-labelledby="deleteConfirmationLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteConfirmationLabel">Confirm Delete</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this note?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <?!= include('jsFunctions'); ?>
 </body>
 </html>
